--- a/assets/css/material-symbols.css
+++ b/assets/css/material-symbols.css
@@ -18,6 +18,6 @@
   font-family: 'Material Symbols Outlined';
   font-style: normal;
   font-weight: 100 700;
-  font-display: swap;
-  src: url('../fonts/material-symbols-outlined.woff2') format('woff2');
+  font-display: block;
+  src: url('../fonts/material-symbols-outlined.woff2?v=20260614') format('woff2');
 }
